2.1/_sources/docs/source/user_guide.md.txt
User Guide
===========================

Intel® Neural Compressor aims to provide popular model compression techniques such as quantization, pruning (sparsity), distillation, and neural architecture search to help the user optimize their model. The below documents could help you to get familiar with concepts and modules in Intel® Neural Compressor. Learn how to utilize the APIs in Intel® Neural Compressor to conduct quantization, pruning (sparsity), distillation, and neural architecture search on mainstream frameworks.

## Overview
This part helps user to get a quick understand about design structure and workflow of Intel® Neural Compressor. We provided broad examples to help users get started.
<table class="docutils">
<tbody>
<tr>
  <td colspan="4" align="center"><a href="design.html#architecture">Architecture</a></td>
  <td colspan="3" align="center"><a href="design.html#workflow">Workflow</a></td>
  <td colspan="1" align="center"><a href="https://intel.github.io/neural-compressor/latest/docs/source/api-doc/apis.html">APIs</a></td>
  <td colspan="1" align="center"><a href="bench.html">GUI</a></td>
</tr>
<tr>
  <td colspan="2" align="center"><a href="https://github.com/intel/neural-compressor/blob/master/examples/README.md#notebook-examples">Notebook</a></td>
  <td colspan="1" align="center"><a href="https://github.com/intel/neural-compressor/blob/master/examples/README.md">Examples</a></td>
  <td colspan="1" align="center"><a href="validated_model_list.html">Results</a></td>
  <td colspan="5" align="center"><a href="https://software.intel.com/content/www/us/en/develop/documentation/get-started-with-ai-linux/top.html">Intel oneAPI AI Analytics Toolkit</a></td>
</tr>
</tbody>
</table>

## Python-based APIs
Python-based APIs contains more details about the functional APIs in Intel® Neural Compressor, 
which introduce the mechanism of each function and provides a tutorial to help the user apply in their own cases. 
Please note that we will stop to support Intel Neural Compressor 1.X API in the future. 
So we provide a comprehensive migration document in Code Migration to help the user update their code from previous 1.X version to the new 2.X version.

<table class="docutils">
<tbody>
<tr>
<td colspan="2" align="center"><a href="quantization.html">Quantization</a></td>
<td colspan="3" align="center"><a href="mixed_precision.html">Advanced Mixed Precision</a></td>
<td colspan="2" align="center"><a href="pruning.html">Pruning (Sparsity)</a></td>
<td colspan="2" align="center"><a href="distillation.html">Distillation</a></td>
</tr>
<tr>
<td colspan="2" align="center"><a href="orchestration.html">Orchestration</a></td>
<td colspan="2" align="center"><a href="benchmark.html">Benchmarking</a></td>
<td colspan="3" align="center"><a href="distributed.html">Distributed Compression</a></td>
<td colspan="3" align="center"><a href="export.html">Model Export</a></td>
</tr>
<tr>
<td colspan="9" align="center"><a href="migration.html">Code Migration from Intel® Neural Compressor 1.X to Intel® Neural Compressor 2.X</a></td>
</tr>
</tbody>
</table>

## Neural Coder (Zero-code Optimization)
Neural Coder shows our special innovation about zero-code optimization to help user quickly apply Intel® Neural Compressor optimization without coding.
<table class="docutils">
<tbody>
<tr>
<td colspan="1" align="center"><a href="./neural_coder/docs/PythonLauncher.html">Launcher</a></td>
<td colspan="2" align="center"><a href="./neural_coder/extensions/neural_compressor_ext_lab/README.html">JupyterLab Extension</a></td>
<td colspan="3" align="center"><a href="./neural_coder/extensions/neural_compressor_ext_vscode/README.html">Visual Studio Code Extension</a></td>
<td colspan="3" align="center"><a href="./neural_coder/docs/SupportMatrix.html">Supported Matrix</a></td>
</tr>
</tbody>
</table>

## Advanced Topics
This part provides the advanced topics that help user dive deep into Intel® Neural Compressor.
<table class="docutils">
<tbody>
<tr>
<td colspan="3" align="center"><a href="adaptor.html">Adaptor</a></td>
<td colspan="3" align="center"><a href="tuning_strategies.html">Strategy</a></td>
<td colspan="3" align="center"><a href="distillation_quantization.html">Distillation for Quantization</a></td>
</tr>
<tr>
<td colspan="3" align="center"><a href="metric.html">Metric</a></td>
<td colspan="3" align="center"><a href="objective.html">Objective</a></td>
<td colspan="3" align="center"><a href="smooth_quant.html">SmoothQuant</a></td>
</tr>
</tbody>
</table>